# tableau_langchain

pkg/: README.md  pyproject.toml
pkg/langchain_tableau/tools/: prompts.py  simple_datasource_qa.py
pkg/langchain_tableau/utilities/: models.py  simple_datasource_qa.py  vizql_data_service.py
