[project]
name = "langchain_tableau"
version = "0.4.39.1"
description = "Tableau tools for Agentic with Langchain and local LLM"
authors = [
    { name = "Stephen Price" },
    { name = "Joe Constantino" },
    { name = "Joseph Fluckiger" },
    { name = "Shalong Samretngan" }
]
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langgraph",
    "langchain-openai",
    "requests",
    "pydantic",
    "pyjwt",
    "aiohttp",
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/suprmans/tableau_langchain"
"Bug Tracker" = "https://github.com/suprmans/tableau_langchain/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pkg/langchain_tableau"]

[tool.hatch.build.targets.sdist]
include = [
    "pkg/langchain_tableau",
    "README.md",
]
